# appveyor-test

./: .travis.yml  Makefile.am  README.md  appveyor.yml  bootstrap  configure.ac  foo.cpp
